# bom-bot

./: .gitmodules  Dockerfile  README.md  bom.bot.cronjob  bom.bot.cronjob.test  bom_bot.py  cron_test.py  docker-compose.yml  pyproject.toml
config/: config.json  logging.json  stations.json
data/bs_data/: Laverton-RAAF Williams-20220830203000.json
docs/: arch.py
logs/: log_file.log.1  log_file.log.2  log_file.log.3  log_file.log.4  log_file.log.5
scripts/: run.sh
src/bom_bot/: __init__.py  models.py
src/bom_scraper/: __init__.py
src/logger/: __init__.py  logger_config.py
